src/test/run-pass/drop-parametric-closure-with-bound-box.rs


fn f<T>(i: @uint, t: T) { }

fn main() { let x = f::<char>(@0xdeafbeefu, _); }
